--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^0.27.2",
     "dompurify": "^2.4.0",
+    "env-cmd": "^10.1.0",
     "fs-extra": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
